--- a/Frontend/src/app/modules/invoices/components/invoices/invoices.component.html
+++ b/Frontend/src/app/modules/invoices/components/invoices/invoices.component.html
@@ -73,7 +73,7 @@
 
     <div>
       <nz-form-item>
-        <nz-form-label nz-col nzSpan="5">Tender</nz-form-label>
+        <nz-form-label nz-col nzSpan="5" class="required">Tender</nz-form-label>
         <nz-form-control nz-col nzSpan="10" nzErrorTip="Please Select Tender">
           <nz-select formControlName="tender_id" nzPlaceHolder="Tender" nzShowSearch (ngModelChange)="selectVendor()">
             <nz-option *ngFor="let t of tender_array" nzValue="{{ t.id }}" nzLabel="{{ t.title}}"></nz-option>
@@ -83,19 +83,19 @@
     </div>
     <div>
       <nz-form-item>
-        <nz-form-label nz-col nzSpan="5">Vendor</nz-form-label>
+        <nz-form-label nz-col nzSpan="5" class="required">Vendor</nz-form-label>
         <nz-form-control nz-col nzSpan="10" nzErrorTip="Please Select Vendor">
-          <input nz-input formControlName="vendor_id" (keyup)="selectVendor()" readonly/>
-          <!-- <nz-select formControlName="vendor_id" nzPlaceHolder="Vendor" nzShowSearch>
-            <nz-option *ngFor="let v of vendor_array" nzValue="{{ v.vendor_id }}"
+          <!-- <input nz-input formControlName="vendor_id" (keyup)="selectVendor()" readonly/> -->
+          <nz-select formControlName="vendor_id" nzPlaceHolder="Vendor" nzShowSearch >
+            <nz-option *ngFor="let v of vendor_array" nzValue="{{ v.vendor_id }}" nzDisabled
               nzLabel="{{ v.vendor_name }}"></nz-option>
-          </nz-select> -->
+          </nz-select>
         </nz-form-control>
       </nz-form-item>
     </div>
     <div>
       <nz-form-item>
-        <nz-form-label nz-col nzSpan="5">Title</nz-form-label>
+        <nz-form-label nz-col nzSpan="5" class="required">Title</nz-form-label>
         <nz-form-control nz-col nzSpan="10" [nzErrorTip]="invoiceErrorTip1">
           <input nz-input formControlName="title" placeholder="Enter Title" />
           <ng-template #invoiceErrorTip1 let-control>
@@ -109,7 +109,7 @@
     </div>
     <div>
       <nz-form-item>
-        <nz-form-label nz-col nzSpan="5">Remarks</nz-form-label>
+        <nz-form-label nz-col nzSpan="5" class="required">Remarks</nz-form-label>
         <nz-form-control nz-col nzSpan="10" [nzErrorTip]="invoiceErrorTip1">
           <input nz-input formControlName="remarks" placeholder="Enter Remarks" />
           <ng-template #invoiceErrorTip1 let-control>
@@ -123,7 +123,7 @@
     </div>
     <div>
       <nz-form-item>
-        <nz-form-label nz-col nzSpan="5">Invoice Number</nz-form-label>
+        <nz-form-label nz-col nzSpan="5" class="required">Invoice Number</nz-form-label>
         <nz-form-control nz-col nzSpan="10" [nzErrorTip]="invoiceErrorTip3">
           <input nz-input formControlName="invoice_number" placeholder="Enter Invoice Number" />
           <ng-template #invoiceErrorTip3 let-control>
@@ -177,10 +177,10 @@
     <div formArrayName="inventory_details" class="dynamicForm">
       <div *ngFor="let x of inventory_details.controls; let i = index" formGroupName="{{i}}" class="mb-1" nz-row
         nzJustify="space-between" nzAlign="bottom">
-        <button nz-col [nzSpan]="1" type="button" nz-button nzType="default" (click)="removeInventory(i)">X</button>
+        <button nz-col [nzSpan]="1" class="border-0" nz-button nzType="default" (click)="removeInventory(i)"><span nz-icon nzType="close-circle" nzTheme="outline"></span></button>
         <nz-form-item nz-col [nzSpan]="4">
-          <nz-form-label *ngIf="i === 0">Item</nz-form-label>
-          <nz-form-control nzErrorTip="Enter Item name">
+          <nz-form-label *ngIf="i === 0" class="required">Item</nz-form-label>
+          <nz-form-control>
             <nz-select formControlName="item" nzPlaceHolder="Select Item" nzShowSearch (ngModelChange)="autoselect(i)">
               <nz-option *ngFor="let inv of updated_inventory" nzValue="{{ inv.item_id }}"
                 nzLabel="{{ inv.item_name }}"></nz-option>
@@ -189,8 +189,8 @@
         </nz-form-item>
 
         <nz-form-item nz-col [nzSpan]="2">
-          <nz-form-label *ngIf="i === 0">Qty</nz-form-label>
-          <nz-form-control nzErrorTip="Enter Quantity">
+          <nz-form-label *ngIf="i === 0" class="required">Qty</nz-form-label>
+          <nz-form-control >
             <input nz-input formControlName="quantity" placeholder="Quantity" (keyup)="change(i)" />
           </nz-form-control>
         </nz-form-item>
@@ -202,14 +202,14 @@
         </nz-form-item>
 
         <nz-form-item nz-col [nzSpan]="3">
-          <nz-form-label *ngIf="i === 0">Price(Rs.)</nz-form-label>
+          <nz-form-label *ngIf="i === 0">Price</nz-form-label>
           <nz-form-control>
             <input nz-input formControlName="price" placeholder="Price" (keyup)="autoselect(i)" readonly/>
           </nz-form-control>
         </nz-form-item>
 
         <nz-form-item nz-col [nzSpan]="2">
-          <nz-form-label *ngIf="i === 0">Tax(%)</nz-form-label>
+          <nz-form-label *ngIf="i === 0">Tax</nz-form-label>
           <nz-form-control>
             <input nz-input formControlName="taxPercent" placeholder="Tax" (keyup)="autoselect(i)" readonly/>
           </nz-form-control>
@@ -221,7 +221,7 @@
           </nz-form-control>
         </nz-form-item>
         <nz-form-item nz-col [nzSpan]="2">
-          <nz-form-label *ngIf="i === 0">Tax Amount</nz-form-label>
+          <nz-form-label *ngIf="i === 0">Tax Amt</nz-form-label>
           <nz-form-control>
             <input nz-input formControlName="taxAmt" placeholder="Tax amount" (keyup)="change(i)" readonly/>
           </nz-form-control>
