minor change in accounts

--- a/Frontend/src/app/modules/accounts/components/accounts/accounts.component.html
+++ b/Frontend/src/app/modules/accounts/components/accounts/accounts.component.html
@@ -22,7 +22,7 @@
       <thead>
         <tr>
           <th nzWidth="100px">S.No.</th>
-          <th>Works Name</th>
+          <th>Account Name</th>
           <th>Actions</th>
         </tr>
       </thead>
